--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "tiny-knn"
-version = "0.1.0"
+version = "0.2.0"
 authors = [
   { name="AmeyaP", email="ameya.prabhu@bethgelab.org" },
 ]
@@ -19,7 +19,7 @@ classifiers = [
 ]
 dependencies = [
     "torch>=2.1",
-    "tqdm"
+    "numpy"
 ]
 
 [project.optional-dependencies]
